--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO_LIST</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/tareas.js"></script>
 </head>
 <body>
     <div class="wrapper"></div>
